[package]
name = "solana-transaction-status"
description = "Solana transaction status types"
documentation = "https://docs.rs/solana-transaction-status"
version = "1.18.89"
edition = "2021"


[dependencies]
Inflector = {workspace = true}
base64 = { workspace = true }
bincode = { workspace = true }
borsh = {workspace = true }
bs58 = { workspace = true }
lazy_static = { workspace = true }
serde = {workspace = true}
serde_derive = {workspace = true}
serde_json = {workspace = true}
spl-associated-token-account = {workspace = true}
spl-memo =  {workspace = true}
spl-token = {workspace = true}
spl-token-2022 = {workspace = true}
thiserror = {workspace = true}
solana-sdk = {workspace = true}
solana-account-decoder={workspace = true}

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
